<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DS Contacts</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_profile">My profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_add_contact">New Contact</string>
    <string name="other">Other</string>
    <string name="custom">Custom</string>
    <string name="add_another_field">Add another field</string>
    <string name="create_new_group">Create new group</string>
    <string-array name="field_phone">
        <item>Mobile</item>
        <item>Home</item>
        <item>Job</item>
        <item>Principal</item>
        <item>Job Fax</item>
        <item>Home Fax</item>
        <item>Pager</item>
        <item>@string/other</item>
        <item>@string/custom</item>
    </string-array>
    <string-array name="field_address_and_email">
        <item>Home</item>
        <item>Job</item>
        <item>@string/other</item>
        <item>@string/custom</item>
    </string-array>
    <string-array name="field_event">
        <item>Birthday</item>
        <item>Commemorative Date</item>
        <item>@string/other</item>
        <item>@string/custom</item>
    </string-array>
    <string-array name="field_im">
        <item>AIM</item>
        <item>Windows Live</item>
        <item>Yahoo</item>
        <item>Skype</item>
        <item>QQ</item>
        <item>Hangouts</item>
        <item>ICQ</item>
        <item>Jabber</item>
        <item>QQ</item>
        <item>@string/other</item>
        <item>@string/custom</item>
    </string-array>
    <string-array name="field_relationship">
        <item>Assistent</item>
        <item>Brother</item>
        <item>Child</item>
        <item>Local partner</item>
        <item>Father</item>
        <item>Friend</item>
        <item>Manager</item>
        <item>Mother</item>
        <item>Partner</item>
        <item>Relative</item>
        <item>Sister</item>
        <item>Wife</item>
        <item>Husband</item>
        <item>@string/other</item>
        <item>@string/custom</item>
    </string-array>
    <string-array name="field_group">
        <item>Friends</item>
        <item>Family</item>
        <item>Coworkers</item>
        <item>@string/create_new_group</item>
    </string-array>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="im">IM</string>
    <string name="note">Note</string>
    <string name="nickname">Nickname</string>
    <string name="website">Website</string>
    <string name="event">Event</string>
    <string name="address">Address</string>
    <string name="relationship">Relationship</string>
    <string name="groups">Groups</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="organization">Organization</string>
    <string name="add_organization">Add organization</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="person">Person</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="confirm">Confirm</string>
    <string name="find_contacts">Find contacts</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="change_photo">Change photo</string>
    <string name="change_color">Change color</string>
    <string name="clear_photo">Clear photo</string>
    <string name="contact_color">Contact color</string>
    <string name="group">Group</string>
    <string name="work">Work</string>
    <string name="add_field">Add field</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
