<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/txt_vw_title"
        android:text="@string/person"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vw_title"
        app:cardCornerRadius="2dp"
        tools:context="br.com.danielsan.dscontacts.fragments.NameSectionFragment" >

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.andexert.expandablelayout.library.ExpandableLayout
                    android:id="@+id/m_expdb_lyt_name_section"
                    xmlns:expandable="http://schemas.android.com/apk/res-auto"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    expandable:el_headerLayout="@layout/expandable_layout_header_name"
                    expandable:el_contentLayout="@layout/expandable_layout_content_name" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/m_img_vw_expand_name"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_expand_more_grey600" />

                    <ImageButton
                        android:id="@+id/m_img_btn_photo"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_tag_faces_black" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/m_btn_add_organization"
                android:text="@string/add_organization"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/m_edt_txt_organization"
                android:inputType="text"
                android:hint="@string/organization"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/m_edt_txt_title"
                android:inputType="text"
                android:hint="@string/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>